--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "author": "marissaChan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "socket.io": "^2.1.1",
-    "utf8": "^3.0.0"
+    "express": "4.16.4",
+    "socket.io": "2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
